--- a/ROBOT.yml
+++ b/ROBOT.yml
@@ -347,7 +347,7 @@ Children:
       Name: robotAccelerometer
     Properties:
       Default Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
-        name: Default Command, type: Command, validators: null, value: None}
+        name: Default Command, type: Command, validators: null, value: measureCmd}
     Base: Subsystem
     Name: measurement
   - Children:
